solidtime/service.yml
apiVersion: v1
kind: Service
metadata:
  name: solidtime-service
  labels:
    app.kubernetes.io/name: solidtime-service
    app.kubernetes.io/part-of: solidtime
spec:
  selector:
    app: solidtime-app
  ports:
    - name: web
      protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: solidtime-gotenberg-service
  labels:
    app.kubernetes.io/name: solidtime-gotenberg-service
    app.kubernetes.io/part-of: solidtime
spec:
  selector:
    app: solidtime-gotenberg
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
